5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1642_2449.log
== TEST (2019-04-15 22:36:39) 
-- CODE:
a=float(input("qual o valor de a: "))
b=float(input("qual o valor de b: "))
c=float(input("qual o valor de c: "))
d=float(input("qual o valor de d: "))
e=float(input("qual o valor de e: "))
f=float(input("qual o valor de f: "))
if (a*x+b*y == c)
	
-- ERROR:
File "XXXX", line 7
    if (a*x+b*y == c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:36:57) 
-- CODE:
a=float(input("qual o valor de a: "))
b=float(input("qual o valor de b: "))
c=float(input("qual o valor de c: "))
d=float(input("qual o valor de d: "))
e=float(input("qual o valor de e: "))
f=float(input("qual o valor de f: "))

	
-- ERROR:
File "XXXX", line 7
    if (a*x+b*y == c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
